<resources>
    <string name="app_name">ImageView</string>
    <string name="menu_message">&#x5F85;&#x529E;</string>
    <string name="menu_music">&#x97F3;&#x4E50;</string>
    <string name="menu_calendar">&#x65E5;&#x5386;</string>
    <string name="menu_profile">&#x6211;&#x7684;</string>
    <string name="menu_projects">&#x9879;&#x76EE;</string>
    <string name="good_evening">Good evening, &#x5434;&#x7F8E;&#x9716;</string>
    <string name="project_1">Project 1</string>
    <string name="x_mins_ago">3 mins ago</string>
    <string name="weekly_todos">Weekly Todos</string>
    <string name="user_avatar">User Avatar</string>
    <string name="profile_username">&#x5434;&#x7F8E;&#x9716;</string>
    <string name="profile_change_background">&#x70B9;&#x51FB;&#x5361;&#x7247;&#x80CC;&#x666F;&#x66F4;&#x6362;&#x56FE;&#x7247;</string>
    <string name="profile_menu_title">&#x4EFB;&#x52A1;</string>
    <string name="menu_all_tasks">&#x6240;&#x6709;&#x4EFB;&#x52A1;</string>
    <string name="menu_completed_tasks">&#x5DF2;&#x5B8C;&#x6210;</string>
    <string name="menu_archived_tasks">&#x5DF2;&#x5F52;&#x6863;</string>
    <string name="task_filter_today">&#x4ECA;&#x5929;</string>
    <string name="task_filter_next_three_days">&#x672A;&#x6765;3&#x5929;</string>
    <string name="task_filter_next_week">&#x672A;&#x6765;&#x4E00;&#x5468;</string>
    <string name="task_editor_title">Task</string>
    <string name="task_editor_title_hint">&#x4F8B;&#x5982;&#xFF0C;&#x5468;&#x4E09;&#x4E0B;&#x5348;3&#x70B9;&#x53D1;&#x9001;&#x4EF7;&#x683C;&#x8868;</string>
    <string name="task_editor_description_hint">&#x63CF;&#x8FF0;</string>
    <string name="task_editor_date">&#x65E5;&#x671F;</string>
    <string name="task_editor_start_time">&#x5F00;&#x59CB;&#x65F6;&#x95F4;</string>
    <string name="task_editor_end_time">&#x7ED3;&#x675F;&#x65F6;&#x95F4;</string>
    <string name="task_editor_tag">&#x6807;&#x7B7E;</string>
    <string name="task_editor_project">&#x9879;&#x76EE;</string>
    <string name="task_editor_reminder">&#x63D0;&#x9192;</string>
    <string name="task_editor_delete">&#x5220;&#x9664;</string>
    <string name="task_editor_save">&#x4FDD;&#x5B58;</string>
    <string name="project_editor_title">Project</string>
    <string name="project_editor_title_hint">&#x9879;&#x76EE;&#x6807;&#x9898;</string>
    <string name="project_editor_remark_hint">&#x5907;&#x6CE8;</string>
    <string name="project_editor_start_date">&#x5F00;&#x59CB;&#x65E5;&#x671F;</string>
    <string name="project_editor_end_date">&#x7ED3;&#x675F;&#x65E5;&#x671F;</string>
    <string name="project_editor_tag">&#x6807;&#x7B7E;</string>
    <string name="project_editor_save">&#x4FDD;&#x5B58;</string>
    <string name="create_task_hint">&#x8F93;&#x5165;&#x65B0;&#x5F85;&#x529E;</string>
    <string name="ai_clipboard_content_description">AI clipboard recognition</string>
</resources>
