<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="228dp"
    android:layout_height="wrap_content"
    android:background="@drawable/task_list_menu_background"
    android:orientation="vertical"
    android:paddingTop="12dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/menu_today"
        style="@style/TaskListMenuItem"
        android:text="@string/task_filter_today" />

    <TextView
        android:id="@+id/menu_next_three_days"
        style="@style/TaskListMenuItem"
        android:text="@string/task_filter_next_three_days" />

    <TextView
        android:id="@+id/menu_next_week"
        style="@style/TaskListMenuItem"
        android:text="@string/task_filter_next_week" />
</LinearLayout>
